@@ -73,6 +73,9 @@ Library
   `io.BytesIO` and `io.StringIO` objects now raise ValueError when the object
   has been closed.  Patch by Alessandro Moura.
 
+- Issue #16126: PyErr_Format format mismatch in _testcapimodule.c.
+  Patch by Serhiy Storchaka.
+
 - Issue #15447: Use `subprocess.DEVNULL` in webbrowser, instead of opening
   `os.devnull` explicitly and leaving it open.
 
